--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -1,49 +1,55 @@
-/*_____Восьмой блок_______*/    
+/*_____Восьмой блок_______*/
 
 .partners__block {
-    display: flex;
-    position: relative;
-    }
-.partners__title {
-    font-size: 24px;
-    font-weight: 600;
-padding-top: 9px;
+  display: flex;
+  position: relative;
 }
+
+.partners__title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: 20px;
+  margin-bottom: 28px;
+}
+
 .partners__container {
-    display: flex;
- margin: 0 auto;
+  display: flex;
+  margin: 0 auto;
 }
 
 .partners__border {
-    display: flex;
-    width: 450px;
-    margin: 0 auto;
-    height: 150px;
-    border: 1px solid #CACACA;
+  display: flex;
+  width: 450px;
+  margin: 0 auto;
+  height: 150px;
+  border: 1px solid #cacaca;
 }
-.partners__border img {
-    filter: grayscale(100%);
-    opacity: .5;
-    padding: 44px 66px;
-    margin: 0 auto;
-    transition: opacity .5s ease;
-    cursor: pointer;
 
+.partners__border img {
+  filter: grayscale(100%);
+  opacity: 0.5;
+  padding: 44px 66px;
+  margin: 0 auto;
+  transition: opacity 0.5s ease;
+  cursor: pointer;
 }
+
 .partners__block-button {
-    flex-basis: 22%;
-    display: flex;
-    align-items: center;
-    position: relative;
+  flex-basis: 22%;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
+
 .partners__btn {
-    position: absolute;
-    z-index: 8;
-    width: 30px;
-    height: 30px;
-    border: none;
-    background-color:#ECECEC;
+  position: absolute;
+  z-index: 8;
+  width: 30px;
+  height: 30px;
+  border: none;
+  background-color: #ececec;
 }
+
 .btn__partners-right {
-    left: 18px;
+  left: 18px;
 }
