--- a/css/blocks/detailed.css
+++ b/css/blocks/detailed.css
@@ -1,44 +1,53 @@
-/*_____Седьмой блок_______*/ 
-.detailed__descr {
-    width: 66%;
-    line-height: 32px;
-    font-size: 16.1px;
-    position: relative;
-}
-.detailed__tooltip {
-    position: relative;      
-    margin: 0px 8px 0 5px; 
-    margin: 0 5px;
-    padding: 0 5px;
-}
-.detailed__icon {   
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    left: -6px;
-    bottom: 9px;
-    cursor: pointer;
+/*_____Седьмой блок_______*/
 
+.detailed__descr {
+  width: 66%;
+  line-height: 32px;
+  font-size: 16px;
+  position: relative;
 }
+.detailed__title {
+  margin-top: 85px;
+  margin-bottom: 22px;
+}
+
+.detailed__tooltip {
+  position: relative;
+  margin: 0px 8px 0 5px;
+  margin: 0 5px;
+  padding: 0 5px;
+}
+
+.detailed__icon {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  left: -6px;
+  bottom: 9px;
+  cursor: pointer;
+}
+
 .detailed__icon svg {
-    fill: white;
-    transition: fill .5s ease;
+  fill: white;
+  transition: fill 0.5s ease;
 }
+
 .popup {
-    position: absolute;   
-    bottom: 29px;
-    color:#FFFFFF;
-    font-size: 12px;
-    text-align: center;  
-    line-height: initial;
-    padding: 8px 11px;
-    background-color:#CACACA;
-    left: -131px;
-    width: 242px;
-    opacity: 0;
-    transition: opacity 0.3s ease-out;
+  position: absolute;
+  bottom: 29px;
+  color: #ffffff;
+  font-size: 12px;
+  text-align: center;
+  line-height: initial;
+  padding: 8px 11px;
+  background-color: #cacaca;
+  left: -131px;
+  width: 242px;
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
 }
+
 .detailed__icon:hover + .popup,
 .detailed__icon:focus + .popup {
-    opacity: 1;
+  opacity: 1;
 }
