--- a/css/blocks/events.css
+++ b/css/blocks/events.css
@@ -1,101 +1,114 @@
 /*_____Пятый блок_________*/
 
-
-.events__container{
-    display: flex;
-    height: 700px;
-    transition: height 1s;
-    margin-top: 26px;
+.events__container {
+  display: flex;
+  height: 700px;
+  transition: height 1s;
+  margin-top: 19px;
 }
+
 .active-event {
-    height: auto;
+  height: auto;
+}
+.events__title {
+  margin-top: 8px;
+  margin-bottom: 0px;
 }
 .events__block {
-    display: flex;
-    flex-direction: column;
-    height: 700px;
-    margin-bottom: 50px;
-    border: 1px solid #CACACA;
-    position: relative;
-    
+  display: flex;
+  flex-direction: column;
+  height: 700px;
+  margin-bottom: 50px;
+  border: 1px solid #cacaca;
+  position: relative;
 }
 
 .events__info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: white;
-    padding: 0 46px;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  padding: 0 45px 0 51px;
+  flex-grow: 1;
 }
+
 .events__info h2 {
-    font-size: 23px;
-    line-height: 30px;
+  font-size: 24px;
+  line-height: 33px;
+  margin-top: 0;
+  font-weight: 600;
 }
-.events__img { 
-    height:300px;
+
+.events__img {
+  height: 300px;
 }
+
 .events__img img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
 .active__event {
-    height: 100%;
+  height: 100%;
 }
+
 .events__adrees {
-   
-    font-size: 12px;
-   margin: 9px 20px  5px;
-    color: #999999;
-    word-break: break-all;
-    line-height: 18px;
-    text-align: right;
+  font-size: 12px;
+  margin: 13px 19px 0px;
+  color: #999999;
+  word-break: break-all;
+  line-height: 18px;
+  text-align: right;
 }
+
 .events__all {
-    flex-wrap: wrap;
-    justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .events__descr {
-    font-size: 16px;
-    line-height: 32px;
-    padding: 7px 0px;
-    
+  font-size: 16px;
+  line-height: 32px;
+  padding: 3px 0px;
 }
+
 .events__all-info {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
+
 .events__text-top {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
-.events__link  {
-    width: 22%;
-    padding-bottom: 5px;
-    background-color: transparent;
-    font-size: 16px;
-   color: #9D5CD0;
-   border: none;
-   border-bottom: 1px solid #9D5CD0;
-   margin: 41px 5px;
+
+.events__link {
+  width: 22%;
+  padding-bottom: 5px;
+  background-color: transparent;
+  font-size: 16px;
+  color: #9d5cd0;
+  border: none;
+  border-bottom: 1px solid #9d5cd0;
+  margin: 39px 5px;
 }
 
 .events__button {
-    display: flex;  
-    justify-content: center;
-    align-items: center;
-    width: 186px;
-    height: 59px;
-    color: #9D5CD0 ;
-    font-weight: 600;
-    margin: 50px auto  78px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 19px 36px;
+  color: #9d5cd0;
+  font-weight: 600;
+  margin: 51px auto 81px;
 }
+
 .more {
-    display: none;
+  display: none;
 }
-.events-slide{
-    width: 500px !important;
- }
+
+.events-slide {
+  width: 500px !important;
+}
