--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -1,38 +1,44 @@
-/*_________Футер__________*/ 
-footer { 
-    background-color: #000000 ;
-  
+/*_________Футер__________*/
+
+footer {
+  background-color: #000000;
 }
+
 .footer__all {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 49px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 49px 0;
 }
+
 .footer__sprite {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 .footer__social {
-    background-image: url(../../img/social/Соцсети.png);
-    cursor: pointer;
-    width: 45px;
-    height: 45px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;    
-    transition: filter .5s ease;
+  background-image: url(../../img/social/social.png);
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: filter 0.5s ease;
 }
 
 .footer__social:nth-child(2) {
-    margin: 0 21px;
+  margin: 0 21px;
 }
+
 .footer__vk {
-    background-position: 0px 0px;
+  background-position: 0px 0px;
 }
+
 .footer__inst {
-    background-position: -63px 0px;
+  background-position: -63px 0px;
 }
-.footer__fc{
-    background-position: -126px 0px; 
+
+.footer__fc {
+  background-position: -126px 0px;
 }
