--- a/css/blocks/generalis.css
+++ b/css/blocks/generalis.css
@@ -1,114 +1,131 @@
+* {
+  box-sizing: border-box;
+}
 
-* {box-sizing: border-box} 
 body {
-    font-family: 'Open Sans';
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-h1,h2,h3,h4,h5,h6, ul ,p {
-    padding: 0;
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p {
+  padding: 0;
+  margin: 0;
 }
+
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-.fix-container {
-    max-width: 1603px;
-    margin:0 auto ;
 
+.fix-container {
+  max-width: 1603px;
+  margin: 0 auto;
 }
+
 .link {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
-ul  {
-    list-style: none;
+
+ul {
+  list-style: none;
 }
+
 img {
-    background-position: center;
+  background-position: center;
 }
 
 /* Хеадер */
 
 /* Заголовки */
+
 .title {
-    font-size: 48px;
-    font-weight: 400;
-    color: #333333 ;
-    margin-bottom: 20px;
-    padding-top: 15px;
-}
-/* Кнопки  */
-.button {
-    background-color: transparent;
-    border: 1px solid #9D5CD0;
-    border-radius: 30px;
-    font-size: 18px;
-}
-button {
-    cursor: pointer;
+  font-size: 48px;
+  font-weight: 400;
+  color: #333333;
+  margin-bottom: 30px;
+  margin-top: 80px;
 }
 
-section:not(:first-child) {
-    margin: 70px 0;
+/* Кнопки  */
+
+.button {
+  background-color: transparent;
+  border: 1px solid #9d5cd0;
+  border-radius: 30px;
+  font-size: 18px;
+}
+
+button {
+  cursor: pointer;
 }
 .btn {
- width: 30px;
- height: 30px;
- border-radius: 30px;
- background-color:#666666 ;
- position: relative;
- margin: 0px 20px ;
- cursor: pointer;
- border: none;
- 
+  width: 30px;
+  height: 30px;
+  border-radius: 30px;
+  background-color: #666666;
+  position: relative;
+  margin: 0px 20px;
+  cursor: pointer;
+  border: none;
 }
 
 .slide__list {
-    display: flex;
-    align-items: center;
-    margin: 49px 2px 31px;
-   
+  display: flex;
+  align-items: center;
+  margin: 49px 2px 31px;
 }
+
 .btn__left {
-    transform: rotate(90deg);
-    margin-left: 0;
+  transform: rotate(90deg);
+  margin-left: 0;
 }
-.list__counter{
-    color: #FFFFFF ;
-    font-size: 16px;
-    width: auto  !important;
-    margin: 0;
+
+.list__counter {
+  color: #ffffff;
+  font-size: 16px;
+  width: auto !important;
+  margin: 0;
 }
+
 .btn__right {
-    transform: rotate(270deg);
+  transform: rotate(270deg);
 }
+
 .btn::before,
 .btn::after {
-    content: '';
-    position: absolute;
-    display: block;
-    top: 35%;
-    width: 1px;
-    height: 11px;
-    background-color: black;
-    transition: background-color 1s ease;
-}
-.btn::before {
-    transform: rotate(45deg); 
-   left: 60%;
-}
-.btn::after {
-    transform: rotate(135deg);
-    right: 60%;
-  
+  content: "";
+  position: absolute;
+  display: block;
+  top: 35%;
+  width: 1px;
+  height: 11px;
+  background-color: black;
+  transition: background-color 1s ease;
 }
 
+.btn::before {
+  transform: rotate(45deg);
+  left: 60%;
+}
+
+.btn::after {
+  transform: rotate(135deg);
+  right: 60%;
+}
 
 .simplebar-content-wrapper {
-    overflow: auto;
-  }
-#custom{
-    height: 100px;
-    width: 100px;
-    background-color: red;
+  overflow: auto;
 }
+
+#custom {
+  height: 100px;
+  width: 100px;
+  background-color: red;
+}
+
