--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -1,257 +1,291 @@
 .header {
-    width: 100%;
-    position: fixed;
-    z-index: 9;
-}
-.header__top {
-    background-color: #000000;
- 
+  width: 100%;
+  position: fixed;
+  z-index: 9;
 }
 
+.header__top {
+  background-color: #000000;
+}
+
+.header__logo img {
+  width: 100%;
+}
 .header__unity {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-   
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .unity-top {
-    padding: 29px 0 30px ;
+  padding: 30px 0 28px;
 }
+
 .header__burger {
-    display: none;
-    width: 36px;
-    height: 28px;
-    background-color: transparent;
-    border: none;
-    position: relative;
-    overflow: hidden;
-   
+  display: none;
+  width: 36px;
+  height: 28px;
+  background-color: transparent;
+  border: none;
+  position: relative;
+  overflow: hidden;
 }
+
 .active {
-    display: none;
+  display: none;
 }
 
 .header__menu.is-active,
-.header__list.is-active{
-left:0 !important;
-
+.header__list.is-active {
+  left: 0 !important;
 }
+
 .header__line,
 .header__line::before,
-.header__line::after{   
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 3px;  
-    left: 0;
-    transition: background-color .3s ease;
-    background-color: white;
-}
-.header__line {
-    top: 0;
-}
-.header__line::before {
-    top: 12px;
-}
 .header__line::after {
-    bottom: -25px;
-}
-.active .header__line::before {
-    left: -10px;
-   
-}
-.active .header__line::after {
-    left: -18px;
-   
-}
-.header__menu {
-   margin: 0 auto 0 181px;
-}
-.header__list {
-    display: flex; 
-    padding: 0px ;
-}
-.item-top {  
-    margin-right: 62px;
-    letter-spacing: 1px;  
-}
-.header__item:last-child {
-    margin-right: 0;
-}
-.header__item {
-    position: relative;
-}
-.header__akk {
-    z-index: 1;
-    margin-right: 2px;
-
-}
-.header__akk * {
-    transition: fill .5s ease;
-}
-.svg path {
-    fill:inherit;
-    stroke:inherit;
-    stroke-width:inherit; 
- 
-}
-.icon-Vector {
-margin-right: 9px;
-  transition: fill .8s ease;
-}
-  .header__link{
-    display: flex;
-    align-items: center;
-    color: #FFFFFF;
-    background-color: transparent;
-    border: none;
-    font-size: 17px; 
-    position: relative;
-    transition: color .5s ease;
-    
-}
-
-
-/*_______________ Нижняя часть______________ */
-.header__bottom {
- background-color: #00000093;
-
- width: 100%;
-}
-.unity-bottom {
-    padding: 20px 0;
-}
-.item-bottom {
-    margin-right: 113px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-.link-bottom {
-    position: relative;
-    font-size: 18px;
-    padding: 0;
-}
-.link-bottom::before,
-.link-bottom::after {
-    content: '';
-    position: absolute;
-    width: 7px;
-    height: 1px;
-    right: -11px;
-    top: 10px;
-    margin-left: 8px;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  left: 0;
+  transition: background-color 0.3s ease;
   background-color: white;
 }
-.link-bottom::before {
-    transform: rotate(45deg);
+
+.header__line {
+  top: 0;
 }
+
+.header__line::before {
+  top: 12px;
+}
+
+.header__line::after {
+  bottom: -25px;
+}
+
+.active .header__line::before {
+  left: -10px;
+}
+
+.active .header__line::after {
+  left: -18px;
+}
+
+.header__menu {
+  margin: 2px auto 5px 179px;
+}
+
+.header__list {
+  display: flex;
+}
+
+.item-top {
+  margin-right: 63px;
+  font-weight: 600;
+}
+
+.header__item:last-child {
+  margin-right: 0;
+}
+
+.header__item {
+  position: relative;
+}
+
+.header__akk {
+  z-index: 1;
+  margin-right: 2px;
+  margin-bottom: 5px;
+}
+
+.header__akk * {
+  transition: fill 0.5s ease;
+}
+
+.svg path {
+  fill: inherit;
+  stroke: inherit;
+  stroke-width: inherit;
+}
+
+.icon-Vector {
+  margin-right: 9px;
+  transition: fill 0.8s ease;
+}
+
+.header__link {
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  position: relative;
+  transition: color 0.5s ease;
+}
+
+/*_______________ Нижняя часть______________ */
+
+.header__bottom {
+  background-color: #00000093;
+  width: 100%;
+}
+
+.unity-bottom {
+  padding: 20px 0;
+}
+
+.item-bottom {
+  margin-right: 113px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.link-bottom {
+  position: relative;
+  font-size: 18px;
+  padding: 0;
+}
+
+.link-bottom::before,
 .link-bottom::after {
-    transform: rotate(135deg);
-    right: -16px;
+  content: "";
+  position: absolute;
+  width: 7px;
+  height: 1px;
+  right: -11px;
+  top: 10px;
+  margin-left: 8px;
+  background-color: white;
 }
- .active-icon .link-bottom::before {
-    transform: rotate(310deg);
-} 
- .active-icon .link-bottom::after{
-    transform: rotate(49deg);
-} 
+
+.link-bottom::before {
+  transform: rotate(45deg);
+}
+
+.link-bottom::after {
+  transform: rotate(135deg);
+  right: -16px;
+}
+
+.active-icon .link-bottom::before {
+  transform: rotate(310deg);
+}
+
+.active-icon .link-bottom::after {
+  transform: rotate(49deg);
+}
+
 .header__search-full * {
-    transition: fill .15s ease;
+  transition: fill 0.15s ease;
 }
+
 .header__search-full {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header__button {
-    width: 23px ;
-    height: 21px;    
-    border: none;
-    background-color: transparent;  
-    margin-right: 13px;
-  
+  width: 23px;
+  height: 21px;
+  border: none;
+  background-color: transparent;
+  margin-right: 13px;
 }
 
 .header__search {
-    border: none;
-    width: 223px;
-    height: 28px;
-   border-bottom: 1px solid #FFFFFF;
-   background-color:  transparent;
-   color:rgba(255, 255, 255, 0.85) ;
-   font-size: 18px;  
-   transition: border-bottom .5s ease;
+  border: none;
+  width: 223px;
+  height: 28px;
+  border-bottom: 1px solid #ffffff;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.85);
+  font-size: 18px;
+  transition: border-bottom 0.5s ease;
 }
+
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button,
 input::-webkit-search-results-button,
-input::-webkit-search-results-decoration { display: none; }
+input::-webkit-search-results-decoration {
+  display: none;
+}
 
 .header__search::placeholder {
-    color:rgba(255, 255, 255, 0.85) ;
-   font-size: 19px;
-   font-weight: 400;
+  color: rgba(255, 255, 255, 0.85);
+  font-size: 19px;
+  font-weight: 400;
 }
+
 .header__content {
-    padding: 30px;
+  padding: 40px;
   display: none;
-    position: absolute;  
-    width: 200px;
-    height: 220px;
-    color: white;
-    top: 43px;
-    left: 0px;
-    z-index: 15;
-    font-size: 14px;
-    background-color: #00000093;
-  
-    
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  color: white;
+  top: 43px;
+  left: -15px;
+  z-index: 15;
+  font-size: 14px;
+  background-color: #00000093;
 }
+
 .header__content--active {
-display: flex;
-width: 220px;
+  display: flex;
 }
+
 .header__select {
-   margin-bottom: 15px;
-    padding: 8px 10px;
-    height: 29px;
-    font-size: 11px;
-    background-size:cover;
+  display: flex;
+  align-items: center;
+  margin-bottom: 32px;
+  padding: 0px 10px;
+  height: 40px;
+  font-weight: 600;
+  font-size: 14px;
+  background-size: cover;
 }
+
 .select-1,
 .select-5,
-.select-9{
-    background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 2.webp);
+.select-9 {
+  background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 2.webp);
 }
+
 .select-2,
 .select-6,
 .select-10 {
-    background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 3.webp);
+  background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 3.webp);
 }
+
 .select-3,
 .select-7,
 .select-11 {
-    background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 1.webp);
+  background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 1.webp);
 }
+
 .select-4,
-.select-8
-.select-12 {
-    background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 2.webp);
+.select-8 .select-12 {
+  background-image: url(../../img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash\ 2.webp);
 }
+
 .simplebar-scrollbar {
-    background-color: #9D5CD0 ;
+  background-color: #9d5cd0;
 }
+
 .simplebar-track.simplebar-vertical {
-    top: 31px;
-    bottom: 28px;
-    width: 2px;
-    margin-right: 14px;
-    background-color: #000000; ;
+  top: 31px;
+  bottom: 28px;
+  width: 2px;
+  margin: 0 19px;
+  background-color: #000000;
 }
+
 .select {
-    display: block;
+  display: block;
 }
+
 .active-icon {
-    display:block;
+  display: block;
 }
