--- a/css/blocks/histoty.css
+++ b/css/blocks/histoty.css
@@ -1,161 +1,192 @@
 /*____Четвертый блок______*/
-.history__header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.history__title {
-    margin: 0;
-}
-.history__img  {
 
-width: 66px;
-height: 66px;
-background-position: center !important;
- border-radius: 50px;
- cursor: pointer;
- margin-right: 30px;
- transition: box-shadow .5s ease;
+.history__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-.history__countries{
-display: flex;
-align-items: center;
-margin-left: 31px;
-margin-top: 10px;
-} 
-.history__img__active {
-   
-    width: 66px;
-    height: 66px;
-    border: 1px solid #9D5CD0;
+
+.history__title {
+  margin: 0;
+}
+.history__unity-block {
+  padding: 80px 0;
+}
+
+.history__countries {
+  display: flex;
+  align-items: center;
+  margin-left: 31px;
+  margin-top: 2px;
+}
+
+.history__elem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
+  border-radius: 50px;
+  width: 66px;
+  height: 66px;
+  transition: box-shadow 0.5s ease;
+  cursor: pointer;
 }
 
 .history__img-1 {
-    background: url(../../img/countries/image\ 4.png) no-repeat;
+  background: url(../../img/countries/image\ 4.png) no-repeat;
 }
+
 .history__img-2 {
-    background: url(../..//img/countries/image\ 6.png) no-repeat;
+  background: url(../..//img/countries/image\ 6.png) no-repeat;
 }
+
 .history__img-3 {
-    background: url(../../img/countries/image\ 7.png) no-repeat;
+  background: url(../../img/countries/image\ 7.png) no-repeat;
 }
+
 .history__img-4 {
-    background: url(../../img/countries/image\ 8.png) no-repeat;
+  background: url(../../img/countries/image\ 8.png) no-repeat;
 }
+
 .history__img-5 {
-    background: url(../../img/countries/image\ 5.png) no-repeat;
+  background: url(../../img/countries/image\ 5.png) no-repeat;
+}
+.history__img {
+  width: 46px;
+  height: 46px;
+  border-radius: 50px;
+  background-position: center !important;
+  background-size: contain;
+}
+.history__img__active {
+  
+  border: 1px solid #9d5cd0;
 }
 .history__descr {
-    line-height: 32px;
-    font-size: 16px;
-    margin: 9px 0 40px;
-}
-.descr-1 {
-    width: 69%;
-    margin: 13px 0 40px;
-}
-.history__info {
-    display: flex;
-    justify-content: space-between;
-    flex-basis: 100%;
-}
-.history__left {
+  line-height: 32px;
+  font-size: 16px;
 
-flex-basis: 47%;
-    margin-right: 48px;
+  margin: 9px 0 40px;
 }
+
+.descr-1 {
+  width: 69%;
+  margin: 13px 0 40px;
+}
+
+.history__info {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 100%;
+}
+
+.history__left {
+  flex-basis: 47%;
+  margin-right: 48px;
+}
+
 .history__left img {
-    width: 100%;
+  width: 100%;
 }
+
 .history__link {
-    transition: color .5s ease;
+  transition: color 0.5s ease;
 }
+
 .history__celebrity {
-    display: flex;
-    flex-direction: column;
-    margin-top: 29px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 27px;
 }
+
 .history__name {
-    font-size: 23px;
-    margin-bottom: 12px;
+  font-size: 24px;
+  margin-bottom: 12px;
+  font-weight: 600;
 }
+
 .history__age {
-    font-size: 12px;
-    color: #999999;
+  font-size: 12px;
+  color: #999999;
 }
+
 .history__right {
-    flex-grow: 1;
-    border-top: 1px solid #CACACA ;
+  flex-grow: 1;
+  border-top: 1px solid #cacaca;
 }
+
 .history__period:first-child {
-    padding-bottom: 2px;
+  padding-bottom: 4px;
 }
-.history__period {  
-position: relative;
-    border-bottom: 1px solid #CACACA;
-    font-size: 24px ;
-    font-weight: 600;
-    cursor: pointer;
-    padding: 43px 0;
+
+.history__period {
+  position: relative;
+  border-bottom: 1px solid #cacaca;
+  font-size: 24px;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 43px 0;
 }
 
 .history__button {
-    background-color: #ECECEC;
-    border: none;
-    width: 50px;
-    height: 50px;
-    float: right;
-    border-radius: 30px;
-    position: absolute;
-    right: 2px;
-    top: 32px;
-    transition: .9s ease;
+  background-color: #ececec;
+  border: none;
+  width: 50px;
+  height: 50px;
+  float: right;
+  border-radius: 30px;
+  position: absolute;
+  right: 2px;
+  top: 32px;
+  transition: 0.9s ease;
 }
+
 .history__button::before,
 .history__button::after {
-    content: '';
-    position: absolute;
-    display: block;
-    top: 40%;
-    width: 1px;
-    height: 11px;
-    background-color: black;
+  content: "";
+  position: absolute;
+  display: block;
+  top: 40%;
+  width: 1px;
+  height: 11px;
+  background-color: black;
 }
+
 .history__button::before {
-    transform: rotate(45deg); 
-    right: 42%;
+  transform: rotate(45deg);
+  right: 42%;
 }
+
 .history__button::after {
-    transform: rotate(135deg);
-    left: 40%;
+  transform: rotate(135deg);
+  left: 40%;
 }
+
 .history__content {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 290px; 
-    width: 91%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  height: 290px;
+  width: 91%;
 }
 
 .active-1 {
-    display: block !important ;
+  display: block !important;
 }
+
 .slide__active {
-    display: none;
-    margin: 43px 0 0;
-    padding: 25px 0;
-    border-top: 1px solid#9D5CD0;
-    border-bottom: 1px solid #9D5CD0;
+  display: none;
+  margin: 43px 0 0;
+  padding: 25px 0 21px;
+  border-top: 1px solid#9D5CD0;
+  border-bottom: 1px solid #9d5cd0;
 }
 
 .history__item {
-    
-    font-size: 15px;
-    line-height: 32px;
+  font-size: 16px;
+  line-height: 32px;
 }
+
 .history__link-active {
-    color: blue;
+  color: blue;
 }
-
-
-
