--- a/css/blocks/start.css
+++ b/css/blocks/start.css
@@ -1,68 +1,66 @@
 /*_____________ Блок 1____________ */
 
 .start__container {
-    height: 799px; 
-    position: relative;  
+  position: relative;
 }
 
 .start__img {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-  
-    z-index:5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  z-index: 5;
 }
-.start .swiper-wrapper {
-position: absolute;
-top: 0;
 
-z-index: 0;
-flex-grow: 1;
+.start .swiper-wrapper {
+  position: absolute;
+  top: 0;
+  z-index: 0;
+  flex-grow: 1;
 }
+
 .start .swiper-wrapper img {
-    width: auto;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
 .start__info {
-    margin: 239px 0 0;
-    line-height: 1.1;
-    z-index:5;
-    width: 37%;
+  padding: 239px 0  120px;
+  z-index: 5;
+  width: 37%;
 }
+
 .start__title {
-    word-break: break-all;
-    font-size: 66px;
-    line-height: 1.25;
-    margin-bottom: 19px;
-    font-weight: 700;
-    letter-spacing: 4px;
-    word-spacing: -5px;
+  word-break: break-all;
+  font-size: 72px;
+  line-height: 86px;
+  margin-bottom: 16px;
+  font-weight: bold;
 }
+
 .start__descr {
-   
-    font-size: 19px;
-    line-height: 1.61;
-    letter-spacing: .5px;
+  font-size: 19px;
+  line-height: 30px;
+  margin-bottom: 92px;
 }
+
 .start__title,
 .start__descr {
-    color: #FFFFFF; 
+  color: #ffffff;
 }
+
 .start__button {
-   display: flex;
-    border: none;
-    margin-bottom: 121px;
-    background-color:#9D5CD0 ;
-    border-radius: 100px;
-    width: 316px;
-    height: 70px;
-    justify-content: center;
-    align-items: center;
-    color: #FFFFFF;
-    font-weight: 700;
-    font-size: 19px;
-    padding: 17px 24px;
-    transition: background-color .3s ease;
-    z-index:5;
+  display: flex;
+  border: none;
+
+  background-color: #9d5cd0;
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  padding: 25px 36px;
+  transition: background-color 0.3s ease;
+  z-index: 5;
 }
