--- a/css/effects/all-clicks.css
+++ b/css/effects/all-clicks.css
@@ -1,69 +1,79 @@
-  /*______Все Клики_______*/  
+  /*______Все Клики_______*/
+
   .header__akk:focus * {
-      color: #7943A4;
-      fill: #7943A4 ;
+    color: #7943A4;
+    fill: #7943A4;
   }
+
   .header__link:focus {
     color: #7943A4;
   }
-    .active-icon .link-bottom::before { 
-   transform: rotate(140deg);
-   
+
+  .active-icon .link-bottom::before {
+    transform: rotate(140deg);
   }
-  
-  .active-icon .link-bottom::after { 
+
+  .active-icon .link-bottom::after {
     transform: rotate(40deg);
-    
-   }
- 
-  .header__element:active::before,
-  .header__element:active::after {
+  }
+
+  .header__element:active::before, .header__element:active::after {
     background-color: #7943A4;
     transition-duration: .3s;
   }
+
   .btn:active {
-      border: 2px solid #D1A9F0;
+    border: 2px solid #D1A9F0;
   }
+
   .history__button:focus {
     transform: rotate(180deg);
-}
-.history__link:active {
-  color: #7943A4;
+  }
 
-}
-  .history__button:focus,
-  .button:focus{
+  .history__link:active {
+    color: #7943A4;
+  }
+
+  .history__button:focus, .button:focus {
     border: 3px solid #D1A9F0;
-      background-color:#7943A4 ;
+    background-color: #7943A4;
   }
-  input[type="checkbox"]:checked + .editions__category::before {
-   border-color:#C283F3 ; 
-}
+
+  input[type="checkbox"]:checked+.editions__category::before {
+    border-color: #C283F3;
+  }
+
   .editions__category:active {
-  color: #7943A4;
-}
-input[type="checkbox"]:checked + .editions__category {
-  color: #C283F3 ;
-}
-  input[type="checkbox"]:checked + .editions__category::after  {
-    opacity: 1; 
-  
-}
-.detailed__icon svg:active {
-  fill: #9D5CD0;
-  stroke:white;
-}
-.start__button:active{
-  border: 3px solid #D1A9F0;
-}
-.detailed__descr a:active {
- color:  #7943A4;
+    color: #7943A4;
   }
-.contacts__img:active{
-  border: 1px solid #9643A4;
-  border-radius: 20px;
-  transition: 0s;
-}
-.gallery__img:focus {
-  background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)),
-}
+
+  input[type="checkbox"]:checked+.editions__category {
+    color: #C283F3;
+  }
+
+  input[type="checkbox"]:checked+.editions__category::after {
+    opacity: 1;
+  }
+
+  .detailed__icon svg:active {
+    fill: #9D5CD0;
+    stroke: white;
+  }
+
+  .start__button:active {
+    border: 3px solid #D1A9F0;
+  }
+
+  .detailed__descr a:active {
+    color: #7943A4;
+  }
+
+  .contacts__img:active {
+    border: 1px solid #9643A4;
+    border-radius: 20px;
+    transition: 0s;
+  }
+
+  .gallery__img:focus {
+    background: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4)),
+  }
